--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 	<script src="assets/handlebars.js"></script>
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="assets/jquery.js"></script>
 	<script src="assets/waves.min.js"></script>
 	<script src="app.js"></script>
 </body>
